# MrJ-JMRI-MCP

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CONDUCTOR.en.md  CONDUCTOR.fr.md  CONTRIBUTING.md  ENGINEER.en.md  ENGINEER.fr.md  INSTALL.md  Makefile  NOTICE.md  README.fr.md  README.md  TINKERER.en.md  TINKERER.fr.md  docker-compose.yml  environment.yml  pyproject.toml  server.json
.github/workflows/: test.yml
config/: live.example.ini
docs/: README.md  architecture.md  cli.md  exhibition.md  install.md  jmri-upstream-issues.md  llm-setup-claude.md  llm-setup-codex.md  llm-setup-xiaozhi.md  llm-setup.md  mcp-tools.md  quickstart.md  release.md  resources.md  testing.md
legacy/: jmri_experimental.py
src/jmri_mcp/: __init__.py  cli.py  config.py  jmri_client.py  jmri_errors.py  jmri_ws.py  server.py  tools.py
src/jmri_mcp/cli/: __init__.py  __main__.py  _common.py  _doc.py  _match.py  _sort.py  banner.py  block.py  constants.py  light.py  parser.py  power.py  roster.py  sensor.py  shell.py  signal.py  state.py  throttle.py  turnout.py
src/jmri_mcp/config/: __init__.py
src/jmri_mcp/constants/: __init__.py  cli.py  client_tuning.py  endpoints.py  protocol.py
src/jmri_mcp/i18n/: __init__.py  en.json  fr.json
src/jmri_mcp/jmri_client/: __init__.py  _http.py  block.py  light.py  power.py  roster.py  sensor.py  signal.py  turnout.py
src/jmri_mcp/jmri_ws/: __init__.py  ramp.py
src/jmri_mcp/server/: __init__.py  __main__.py
src/jmri_mcp/tools/: __init__.py  _common.py  block.py  light.py  mode.py  power.py  roster.py  sensor.py  signal.py  throttle.py  turnout.py
src/xiaozhi_wrapper/: __init__.py  mcp_config.json
tests/: conftest.py  test_cli.py  test_config.py  test_jmri_client.py  test_jmri_ws.py  test_live.py  test_power_off_all.py  test_server.py  test_set_light.py  test_set_power.py  test_set_turnout.py  test_shell.py  test_system_status.py  test_tools.py
tests/fixtures/: roster_response.json  signal_masts_response.json  turnouts_response.json
