[project]
name = "jmri-mcp"
version = "0.1.0"
description = "MCP server for JMRI - voice/chat control of DCC model railroads (xiaozhi, Claude, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
dependencies = [
    "mcp>=1.8.1",
    "httpx>=0.27",
    "websockets>=11.0.3",
]

[project.scripts]
jmri-mcp = "jmri_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmri_mcp"]
