[project]
name = "jmri-mcp"
version = "0.1.0"
description = "MCP server for JMRI - voice/chat control of DCC model railroads (xiaozhi, Claude, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
dependencies = [
    "mcp>=1.8.1",
    "httpx>=0.27",
    "websockets>=11.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
jmri-mcp = "jmri_mcp.server:main"
jmri-cli = "jmri_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jmri_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: requires a real, reachable JMRI server (opt-in, see tests/test_live.py)",
]
